--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,10 +8,10 @@
 }
 .markdown-body p {
   line-height: 1.8em;
-  text-indent: 2em;
 }
 .markdown-body ul {
   list-style: none;
+  padding-left: 0.5em;
 }
 .markdown-body ul li::before {
   content: "– ";
